wikimedia.us redirect per rt4416
Change-Id: I5c765ca9b09cb3e67d4a4d3adaa7ee062b38cbcc

--- a/redirects.conf
+++ b/redirects.conf
@@ -102,6 +102,7 @@
         wikimaps.com *.wikimaps.com \
         wikimaps.org *.wikimaps.org \
         wikimedia.biz *.wikimedia.biz \
+        wikimedia.us *.wikimedia.us\
         wikimediacommons.co.uk *.wikimediacommons.co.uk \
         wikimediacommons.eu *.wikimediacommons.eu \
         wikimediacommons.info *.wikimediacommons.info \
@@ -328,6 +329,9 @@
 
     RewriteCond %{HTTP_HOST} (^|\.)en-wp\.(com|org)$
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
+
+    RewriteCond %{HTTP_HOST} ^(.*\.|)wikimedia\.us$
+    RewriteRule ^(.*)$ http://%1wikimedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikipedia.com [OR]
     RewriteCond %{HTTP_HOST} =wikipedia.net [OR]
