--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -29,7 +29,7 @@
 # Chapter wikis
 <VirtualHost *>
     ServerName wikimedia-chapter
-    ServerAlias no.wikimedia.org nl.wikimedia.org www.nl.wikimedia.org pl.wikimedia.org nz.wikimedia.org il.wikimedia.org rs.wikimedia.org pa.us.wikimedia.org uk.wikimedia.org us.wikimedia.org se.wikimedia.org ru.wikimedia.org ua.wikimedia.org co.wikimedia.org fi.wikimedia.org ve.wikimedia.org br.wikimedia.org dk.wikimedia.org tr.wikimedia.org noboard.chapters.wikimedia.org mk.wikimedia.org et.wikimedia.org nyc.wikimedia.org mx.wikimedia.org ar.wikimedia.org bd.wikimedia.org be.wikimedia.org
+    ServerAlias no.wikimedia.org nl.wikimedia.org www.nl.wikimedia.org pl.wikimedia.org nz.wikimedia.org il.wikimedia.org rs.wikimedia.org pa-us.wikimedia.org uk.wikimedia.org us.wikimedia.org se.wikimedia.org ru.wikimedia.org ua.wikimedia.org co.wikimedia.org fi.wikimedia.org ve.wikimedia.org br.wikimedia.org dk.wikimedia.org tr.wikimedia.org noboard.chapters.wikimedia.org mk.wikimedia.org et.wikimedia.org nyc.wikimedia.org mx.wikimedia.org ar.wikimedia.org bd.wikimedia.org be.wikimedia.org
     UseCanonicalName off
     DocumentRoot "/usr/local/apache/common/docroot/wikimedia.org"
 
