better redirect for pa.us to pa-us chapter wiki (bug 38763)
Change-Id: I2625f4128e8f152745f20be808e70d665c138e13

--- a/redirects.conf
+++ b/redirects.conf
@@ -281,7 +281,7 @@
     RewriteRule ^(.*)$ http://no.wikipedia.org$1 [R=301,L,NE]
 
     # renamed chapter wiki - bug 38763
-    RewriteCond %{HTTP_HOST} =pa.us.wikimedia.org
+    RewriteCond %{HTTP_HOST} ^pa\.us\.wikimedia\.org$
     RewriteRule ^(.*)$ http://pa-us.wikimedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =tp.wikipedia.org
