Bug 39482 - Rename "chapcomwiki" to "affcomwiki"
Change-Id: I4af3104b24494b2432876e575c025ef26bcaa4b0

--- a/redirects.conf
+++ b/redirects.conf
@@ -10,6 +10,7 @@
         bugs.mediawiki.org \
         bugzilla.mediawiki.org \
         bugzilla.wikipedia.org \
+        chapcom.wikimedia.org \
         cs.wikimedia.org \
         cz.wikibooks.org \
         cz.wikimedia.org \
@@ -628,7 +629,7 @@
     RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
 
     RewriteCond %{HTTP_HOST} (.+)\.wikimania.asia$
-    RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
+\    RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikimania.asia
     RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
@@ -655,6 +656,10 @@
     # sometime in 2013
     RewriteCond %{HTTP_HOST} =wlm.wikimedia.org
     RewriteRule ^(.*)$ http://toolserver.org/~erfgoed$1 [R=301,L,NE]
+
+    # chapcom -> affcom
+    RewriteCond %{HTTP_HOST} =chapcom.wikimedia.org
+    RewriteRule ^(.*)$ http://affcom.wikimedia.org/$1 [R=301,L,NE]
 
     # tartupeedia.ee (WMEE-owned domain) - bug 44893
     RewriteCond %{HTTP_HOST} (.*)tartupeedia\.ee$
