--- a/remnant.conf
+++ b/remnant.conf
@@ -722,19 +722,19 @@
     </Directory>
 </VirtualHost>
 
-# affcom wiki
+# Chapcom wiki
 <VirtualHost *>
-    DocumentRoot "/usr/local/apache/common/docroot/affcom"
-    ServerName affcom.wikimedia.org
+    DocumentRoot "/usr/local/apache/common/docroot/chapcom"
+    ServerName chapcom.wikimedia.org
 
     AllowEncodedSlashes On
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://affcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://chapcom.wikimedia.org/$1 [R=301,L]
 
     # Primary wiki redirector:
-    Alias /wiki /usr/local/apache/common/docroot/affcom/w/index.php
+    Alias /wiki /usr/local/apache/common/docroot/chapcom/w/index.php
     RewriteRule ^/$ /w/index.php
 
     # UseMod compatibility URLs
@@ -747,12 +747,12 @@
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
-    <Directory "/usr/local/apache/common/docroot/affcom/w">
+    <Directory "/usr/local/apache/common/docroot/chapcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
         </IfModule>
     </Directory>
-    <Directory "/usr/local/apache/common/docroot/affcom/w/extensions">
+    <Directory "/usr/local/apache/common/docroot/chapcom/w/extensions">
         <IfModule mod_php5.c>
             php_admin_flag engine off
         </IfModule>
