--- a/redirects.conf
+++ b/redirects.conf
@@ -12,6 +12,7 @@
         bugzilla.wikipedia.org \
         careers.wikipedia.org \
         coffee.wikimedia.org \
+        chapcom.wikimedia.org \
         cs.wikimedia.org \
         cz.wikibooks.org \
         cz.wikimedia.org \
@@ -716,6 +717,10 @@
     # sometime in 2013
     RewriteCond %{HTTP_HOST} =wlm.wikimedia.org
     RewriteRule ^(.*)$ http://toolserver.org/~erfgoed$1 [R=301,L,NE]
+
+    # chapcom -> affcom
+    RewriteCond %{HTTP_HOST} =chapcom.wikimedia.org
+    RewriteRule ^(.*)$ https://affcom.wikimedia.org$1 [R=301,L,NE]
 
     # tartupeedia.ee (WMEE-owned domain) - bug 44893
     RewriteCond %{HTTP_HOST} (.*)tartupeedia\.ee$
