adding redirection for wikiipedia.org
Change-Id: I3c2f62d91ba7ec7132fccc6329f840175b96a546

--- a/redirects.conf
+++ b/redirects.conf
@@ -94,6 +94,7 @@
         wikidruhy.cz *.wikidruhy.cz \
         wikifamily.com *.wikifamily.com \
         wikifamily.org *.wikifamily.org \
+        wikiipedia.org *.wikiipedia.org \
         wikijunior.com *.wikijunior.com \
         wikijunior.net *.wikijunior.net \
         wikijunior.org *.wikijunior.org \
@@ -333,6 +334,10 @@
 
     RewriteCond %{HTTP_HOST} (^|\.)en-wp\.(com|org)$
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
+
+    RewriteCond %{HTTP_HOST} =wikiipedia.org [OR]
+    RewriteCond %{HTTP_HOST} =www.wikiipedia.org [OR]
+    RewriteRule ^(.*)$ http://www.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikipedia.com [OR]
     RewriteCond %{HTTP_HOST} =wikipedia.net [OR]
