added wikimaps.net to act like the wikimaps.com/org
Change-Id: Ia1b3ab70f8384803d60c1d5e63cd68a0f761f7ae

--- a/redirects.conf
+++ b/redirects.conf
@@ -102,6 +102,7 @@
         wikimania.asia *.wikimania.asia \
         wikimania.wikimedia.org \
         wikimaps.com *.wikimaps.com \
+        wikimaps.net *.wikimaps.net \
         wikimaps.org *.wikimaps.org \
         wikimedia.biz *.wikimedia.biz \
         wikimediacommons.co.uk *.wikimediacommons.co.uk \
