fixing or statement
Change-Id: I48d34054870ffc9bb87aecf808a626eb80bd30c2

--- a/redirects.conf
+++ b/redirects.conf
@@ -336,7 +336,7 @@
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikiipedia.org [OR]
-    RewriteCond %{HTTP_HOST} =www.wikiipedia.org [OR]
+    RewriteCond %{HTTP_HOST} =www.wikiipedia.org
     RewriteRule ^(.*)$ http://www.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikipedia.com [OR]
