add wikiartpedia.ORG to the other wikiartpedia redirects (RT-4240)
Change-Id: Id73091f350558946effea97f83a9926f40782d7e

--- a/redirects.conf
+++ b/redirects.conf
@@ -83,6 +83,7 @@
         wikiartpedia.me *.wikiartpedia.me \
         wikiartpedia.mobi *.wikiartpedia.mobi \
         wikiartpedia.net *.wikiartpedia.net \
+        wikiartpedia.org *.wikiartpedia.org \
         wikibook.org *.wikibook.org wikibook.com wikibooks.com *.wikibook.com \
         wikibooks.cz *.wikibooks.cz \
         wikibooks.de www.wikibooks.de *.wikibooks.com \
@@ -297,7 +298,7 @@
     RewriteRule ^(.*)$ http://zh.wikipedia.org$1 [R=301,L,NE]
 
     # RT #4240
-    RewriteCond %{HTTP_HOST} (^|\.)wikiartpedia\.(biz|co|info|me|mobi|net)$
+    RewriteCond %{HTTP_HOST} (^|\.)wikiartpedia\.(biz|co|info|me|mobi|net|org)$
     RewriteRule ^(.*)$ http://www.wikipedia.org [R=301,L]
 
     # Wikibooks
