always redirect wikimediafoundation.org to https (RT-4830)
Change-Id: I78de42092f7ea45781e0fc3651e88009baa4d949

--- a/redirects.conf
+++ b/redirects.conf
@@ -557,7 +557,7 @@
     # wikimediafoundation
     RewriteCond %{HTTP_HOST} (^|\.)wikimediafoundation\.(com|net|info)$ [OR]
     RewriteCond %{HTTP_HOST} \.wikimediafoundation\.org$
-    RewriteRule ^(.*)$ http://wikimediafoundation.org$1 [R=301,L]
+    RewriteRule ^(.*)$ https://wikimediafoundation.org$1 [R=301,L]
 
     # Bookshelf Project
     RewriteCond %{HTTP_HOST} =bookshelf.wikimedia.org
