redirect wikinews.com to .org - RT-4804
Change-Id: I6fb7d611a42f8a48303343ceee20a21dc3e1ff03

--- a/redirects.conf
+++ b/redirects.conf
@@ -121,6 +121,7 @@
         wikimedia.lt *.wikimedia.lt \
         wiki.mediawiki.org \
         wikimemory.org *.wikimemory.org \
+        wikinews.com *.wikinews.com \
         wikinews.de *.wikinews.de \
         wikipaedia.net *.wikipaedia.net \
         wikipedia.bg *.wikipedia.bg \
@@ -400,6 +401,12 @@
 
     RewriteCond %{HTTP_HOST} (^|\.)wikimediacommons.(net|info|mobi|eu|org|jp\.net)$
     RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L,NE]
+
+    RewriteCond %{HTTP_HOST} =wikinews.com
+    RewriteRule ^(.*)$ http://wikinews.org$1 [R=301,L,NE]
+
+    RewriteCond %{HTTP_HOST} ^(.+)\.wikinews\.com$
+    RewriteRule ^(.*)$ http://%1.wikinews.org$1 [R=301,L,NE]
 
     # Localised TLDs
 
