add wikpedia.org to redirect to wikipedia (RT-4803)
Change-Id: Ifadc0dc82437f1cdf6170527a20e309226f19f5e

--- a/redirects.conf
+++ b/redirects.conf
@@ -158,6 +158,7 @@
         wikivoyager.org *.wikivoyager.org \
         wikizdroje.cz *.wikizdroje.cz \
         wikizpravy.cz *.wikizpravy.cz \
+        wikpedia.org *.wikpedia.org \
         wiktionary.com *.wiktionary.com \
         wiktionary.cz *.wiktionary.cz \
         wiktionary.wikipedia.org \
