add webhostingwikipedia.com redirect (RT-4678)
Change-Id: If3cff3fbedb3fcfd4960bc8c7afe0c172d71f4ce

--- a/redirects.conf
+++ b/redirects.conf
@@ -76,6 +76,7 @@
         tartupeedia.ee *.tartupeedia.ee \
         textbook.wikipedia.org \
         vikimedija.org *.vikimedija.org \
+        webhostingwikipedia.com *.webhostingwikipedia.com \
         wicipediacymraeg.org *.wicipediacymraeg.org \
         wikiartpedia.biz *.wikiartpedia.biz \
         wikiartpedia.co *.wikiartpedia.co \
