(bug 47305) Add /zh-mo as an alias for wikipedia.org/w/index.php
With zh-mo enabled in bug 47204 (I5806a17d), MediaWiki starts to
generate /zh-mo links which returns 404.

Bug: 47305
Bug: 47204
Change-Id: I50dfaa270fb4729ac65478326b40452872078cb6

--- a/main.conf
+++ b/main.conf
@@ -359,6 +359,7 @@
     Alias /zh-hant /usr/local/apache/common/docroot/wikipedia.org/w/index.php
     Alias /zh-cn /usr/local/apache/common/docroot/wikipedia.org/w/index.php
     Alias /zh-hk /usr/local/apache/common/docroot/wikipedia.org/w/index.php
+    Alias /zh-mo /usr/local/apache/common/docroot/wikipedia.org/w/index.php
     Alias /zh-sg /usr/local/apache/common/docroot/wikipedia.org/w/index.php
     Alias /zh-tw /usr/local/apache/common/docroot/wikipedia.org/w/index.php
 
