add wikiepdia.com and wikiepdia.org ServerAliases to redirect to wikipedia.org since wikipedia.org is the default redirect nothing needed besides this
already in DNS, pointing to 'unconfigured domain' page currently.

RT #4682

Change-Id: Ie71200b026e6c7791622c02bc6d1d5ffda4d63d9

--- a/redirects.conf
+++ b/redirects.conf
@@ -94,6 +94,8 @@
         wikidisclosure.com *.wikidisclosure.com \
         wikidisclosure.org *.wikidisclosure.org \
         wikidruhy.cz *.wikidruhy.cz \
+        wikiepdia.com *.wikiepdia.com \
+        wikiepdia.org *.wikiepdia.org \
         wikifamily.com *.wikifamily.com \
         wikifamily.org *.wikifamily.org \
         wikiipedia.org *.wikiipedia.org \
