keep the historic coffee.wm URL for historic reasons and until we actually implement RFC 2324 (again?) redirect it as a reminder :)
Change-Id: I2541d430853748c7345ddd7e2c0a5ae975b8d9a0

--- a/redirects.conf
+++ b/redirects.conf
@@ -9,6 +9,7 @@
         bugs.mediawiki.org \
         bugzilla.mediawiki.org \
         bugzilla.wikipedia.org \
+        coffee.wikimedia.org \
         cs.wikimedia.org \
         cz.wikibooks.org \
         cz.wikimedia.org \
@@ -684,6 +685,10 @@
     # indiawikipedia.com - RT #1395
     RewriteCond %{HTTP_HOST} (.*)indiawikipedia\.com$
     RewriteRule ^(.*)$ http://wikimedia.in/wikipedia.html [R=301,L]
+
+    # coffee - keep for historic reasons:)
+    RewriteCond %{HTTP_HOST} =coffee.wikimedia.org
+    RewriteRule ^(.*)$ http://en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol$1 [R=301,L,NE]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
