--- a/redirects.conf
+++ b/redirects.conf
@@ -688,7 +688,7 @@
 
     # coffee - keep for historic reasons:)
     RewriteCond %{HTTP_HOST} =coffee.wikimedia.org
-    RewriteRule ^(.*)$ http://en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol$1 [R=301,L,NE]
+    RewriteRule ^(.*)$ http://en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol [R=301,L,NE]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
