add secure.wikimedia.org (old SSL site) redirects to cluster.
they are still on singer right now, but that needs to go.

the redirect rules are exactly as they are on singer right now.

they are a straight copy, what i changed versus the singer config was:

- <VirtualHost 208.80.152.134:443> becomes <VirtualHost *>

- <VirtualHost 208.80.152.134:80> is dropped. this had a single rule
  to redirect http to https
  RewriteRule ^/(.*)$ https://secure.wikimedia.org/$1 [R=302]

- removed any logging related lines, like ErrorLog, CustomLog and LogLevel

- removed SSLEngine/SSLCertificate/Key lines

of course if this is merged there also needs to be a DNS change:

secure          1H  IN A        208.80.152.134 ; service IP, currently on singer

would become

secure  1H IN CNAME   wikimedia-lb

PS2: - add DocumentRoot to existing docroot/secure on cluster
     - delete conflicting wikimedia-ssl-backend.conf

Change-Id: I3f62b4edbea910f4032d324d4599637b779c8f2c

--- a/all.conf
+++ b/all.conf
@@ -36,4 +36,7 @@ Include /etc/apache2/wmf/en2.conf
 # A couple of redirects for www.XXX.wikipedia.org
 Include /etc/apache2/wmf/postrewrites.conf
 
+# A couple of redirects for old secure.wikimedia.org
+Include /etc/apache2/wmf/secure.wikimedia.conf
+
 # vim: syn=apache sts=4 sw=4 autoindent
