--- a/remnant.conf
+++ b/remnant.conf
@@ -573,6 +573,47 @@
   </Directory>
 </VirtualHost>
 
+# Wikimania wiki - 2014
+
+<VirtualHost *>
+    DocumentRoot "/usr/local/apache/common/docroot/wikimania2014"
+    ServerName wikimania2014.wikimedia.org
+
+    AllowEncodedSlashes On
+
+    RewriteEngine On
+
+    # Primary wiki redirector:
+    Alias /wiki /usr/local/apache/common/docroot/wikimania2014/w/index.php
+    RewriteRule ^/$ /w/index.php
+
+    # UseMod compatibility URLs
+    RewriteCond %{QUERY_STRING} ([^&;]+)
+    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+
+    # Early phase 2 compatibility URLs
+    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+
+    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Uploads are offsite
+    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2014/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
+  <Directory "/usr/local/apache/common/docroot/wikimania2014/w">
+   <IfModule mod_php5.c>
+    php_admin_flag engine on
+   </IfModule>
+  </Directory>
+  <Directory "/usr/local/apache/common/docroot/wikimania2014/w/extensions">
+   <IfModule mod_php5.c>
+    php_admin_flag engine off
+   </IfModule>
+  </Directory>
+</VirtualHost>
 
 # Internal wiki
 <VirtualHost *>
