--- a/redirects.conf
+++ b/redirects.conf
@@ -140,6 +140,7 @@
         wikipedia.lt *.wikipedia.lt \
         wikipedia.net *.wikipedia.net \
         wikipedia.org.il *.wikipedia.org.il \
+        wikipediazero.org *.wikipediazero.org \
         wiki-pedia.org *.wiki-pedia.org \
         wikipedie.cz *.wikipedie.cz \
         wikiquote.com *.wikiquote.com\
@@ -689,6 +690,10 @@
     # coffee - keep for historic reasons:)
     RewriteCond %{HTTP_HOST} =coffee.wikimedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol [R=301,L,NE]
+
+    # wikipediazero.org - RT #5039
+    RewriteCond %{HTTP_HOST} (.*)wikipediazero.org$
+    RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Wikipedia_Zero [R=301,L,NE]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
