Redirecting wikipediazero.org  to  http://wikimediafoundation.org/wiki/Wikipedia_Zero
RT 5039

Change-Id: I077e4bea273c9bb2640d933bae99285f45a224c3

--- a/redirects.conf
+++ b/redirects.conf
@@ -140,6 +140,7 @@
         wikipedia.lt *.wikipedia.lt \
         wikipedia.net *.wikipedia.net \
         wikipedia.org.il *.wikipedia.org.il \
+        wikipediazero.org *.wikipediazero.org \
         wiki-pedia.org *.wiki-pedia.org \
         wikipedie.cz *.wikipedie.cz \
         wikiquote.com *.wikiquote.com\
@@ -692,6 +693,10 @@
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
+
+    # wikipediazero.org - RT #5039
+    RewriteCond %{HTTP_HOST} (.*)wikipediazero.org$
+    RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Wikipedia_Zero [R=301,L,NE]
 
 </VirtualHost>
 
