--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -253,4 +253,34 @@
 
 </VirtualHost>
 
+# loginwiki
+<VirtualHost *>
+    DocumentRoot "/usr/local/apache/common/docroot/login"
+    ServerName login.wikimedia.org
+
+    AllowEncodedSlashes On
+
+    RewriteEngine On
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule ^/(.*)$ https://login.wikimedia.org/$1 [R=301,L]
+
+    # Primary wiki redirector:
+    Alias /wiki /usr/local/apache/common/docroot/login/w/index.php
+    RewriteRule ^/$ /w/index.php
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
+    <Directory "/usr/local/apache/common/docroot/login/w">
+        <IfModule mod_php5.c>
+            php_admin_flag engine on
+        </IfModule>
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/login/w/extensions">
+        <IfModule mod_php5.c>
+            php_admin_flag engine off
+        </IfModule>
+    </Directory>
+</VirtualHost>
+
 # vim: sts=4 sw=4 syn=apache autoindent
