WIP: Simplify wikimania apache conf
Change-Id: I7d92dc7f5e9c431fe6d1686296c7fdd1e8655bbf

--- a/all.conf
+++ b/all.conf
@@ -27,6 +27,9 @@ Include /etc/apache2/wmf/search.wikimedia.conf
 # *.wikimedia.org
 Include /etc/apache2/wmf/wikimedia.conf
 
+# *.wikimania.org
+Include /etc/apache2/wmf/wikimania.conf
+
 # wikimediafoundation.org and its aliases
 Include /etc/apache2/wmf/foundation.conf
 
