Simplify wikimania apache conf
Depends on https://gerrit.wikimedia.org/r/#/c/67341/

Change-Id: I7d92dc7f5e9c431fe6d1686296c7fdd1e8655bbf

--- a/all.conf
+++ b/all.conf
@@ -24,6 +24,9 @@ Include /etc/apache2/wmf/wikimedia-ssl-backend.conf
 # search.wikimedia.org
 Include /etc/apache2/wmf/search.wikimedia.conf
 
+# wikimania*.wikimedia.org
+Include /etc/apache2/wmf/wikimania.conf
+
 # *.wikimedia.org
 Include /etc/apache2/wmf/wikimedia.conf
 
