--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -261,24 +261,27 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://login.wikimedia.org/$1 [R=301,L]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/login/w/index.php
     RewriteRule ^/$ /w/index.php
+
+    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Uploads are offsite
+    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/login/$1 [R=302]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/login/w">
         <IfModule mod_php5.c>
-            php_admin_flag engine on
+          php_admin_flag engine on
         </IfModule>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/login/w/extensions">
         <IfModule mod_php5.c>
-            php_admin_flag engine off
+          php_admin_flag engine off
         </IfModule>
     </Directory>
 </VirtualHost>
