Make be-x-old.wikisource.org point to be.wikisource.org
Bug: 41755
Change-Id: I4338483a46073dbb0827cc14c098d4b5091712d8

--- a/redirects.conf
+++ b/redirects.conf
@@ -6,6 +6,7 @@
     ServerName redirector.wikipedia.org
     ServerAlias wikipedia.com *.wikipedia.com wikipedia.org \
         bookshelf.wikimedia.org \
+	be-x-old.wikisource.org \
         bugs.mediawiki.org \
         bugzilla.mediawiki.org \
         bugzilla.wikipedia.org \
@@ -234,6 +235,10 @@
     RewriteRule ^(.*)$ https://donate.wikimedia.org$1 [R=301,L,NE]
 
     # Language aliases
+
+    # Bug 41755
+    RewriteCond %{HTTP_HOST} =be-x-old.wikisource.org
+    RewriteRule ^(.*)$ http://be.wikisource.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =de-beta.wikipedia.org
     RewriteRule ^(.*)$ http://de.wikipedia.org$1 [R=301,L,NE]
