--- a/redirects.conf
+++ b/redirects.conf
@@ -56,6 +56,7 @@
         nb.wikipedia.org tp.wikipedia.org \
         nostalgia.wikimedia.org \
         pa.us.wikimedia.org \
+        pk.wikimedia.org \
         pt.wikimedia.org \
         quality.wikipedia.org quality.wikipedia.com \
         quote.wikipedia.org \
@@ -637,6 +638,9 @@
     RewriteCond %{HTTP_HOST} =cz.wikimedia.org [OR]
     RewriteCond %{HTTP_HOST} =cs.wikimedia.org
     RewriteRule . http://www.wikimedia.cz/ [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =pk.wikimedia.org
+    RewriteRule ^/wiki/(.*)$ http://www.wikimedia.pk/$1 [R=301,L,NE]
 
     # pt.wikimedia.org got moved to wikimedia.pt
 
