add virtual language subdomain redirects for wikidata
redirect anything NOT www or test to redirector.php and pass the path

PS4: don't redirect test per Reedy change 65589
PS5: pass HTTP_HOST and REQUEST_URI to redirector.php

Change-Id: I1cda5c2544bb06d960a1ebef9398cd106ccb4144

--- a/main.conf
+++ b/main.conf
@@ -72,6 +72,10 @@
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
 
+    # redirects for wikidata language subdomains
+    RewriteCond %{HTTP_HOST} !=(www|test)\.wikidata\.org
+    RewriteRule ^(.*)$ /w/redirector.php?host=%{HTTP_HOST}&uri=%{REQUEST_URI} [L]
+
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
