add virtual language subdomain redirects for wikidata
redirect anything NOT www to redirector.php and pass the path

Change-Id: I1cda5c2544bb06d960a1ebef9398cd106ccb4144

--- a/main.conf
+++ b/main.conf
@@ -72,6 +72,10 @@
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
 
+    # redirects for wikidata language subdomains
+    RewriteCond %{HTTP_HOST} !(^www\.wikidata\.org$)
+    RewriteRule ^(.*)$ /usr/local/apache/common/docroot/wikidata/w/redirector.php?path=$1 [L]
+
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
