add virtual language subdomain redirects for wikidata
redirect anything NOT www or test to redirector.php and pass the path

PS4: don't redirect test per Reedy change 65589
PS5: pass HTTP_HOST and REQUEST_URI to redirector.php
PS6: use Special page as target instead, different rules to
     turn into Special:ItemByTitle/{site}/{title}

Change-Id: I1cda5c2544bb06d960a1ebef9398cd106ccb4144

--- a/main.conf
+++ b/main.conf
@@ -114,6 +114,11 @@
     # https://meta.wikimedia.org/wiki/Wikidata/Notes/URI_scheme
     RewriteRule ^/entity/(.*)$ https://www.wikidata.org/wiki/Special:EntityData/$1 [R=302,QSA]
 
+    # redirects for wikidata language subdomains
+    RewriteCond %{HTTP_HOST} !^(www|test)\.wikidata\.org$
+    RewriteCond %{HTTP_HOST}<>%{REQUEST_URI} ^([^.]+)\.wikidata\.org(:80)?<>/wiki/([^/]*) [NC]
+    RewriteRule ^(.*) https://www.wikidata.org/wiki/Special:ItemByTitle/%1/%2 [R=301,L]
+
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
