--- a/main.conf
+++ b/main.conf
@@ -72,6 +72,13 @@
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
 
+    # redirects for wikidata language subdomains
+    RewriteCond %{HTTP_HOST} !=(www|test)\.wikidata\.org
+    RewriteCond %{HTTP_HOST}<>%{REQUEST_URI} ^([^.]+)\.wikidata\.org(:80)?<>/wiki/([^/]*) [NC]
+    # prevent mod_rewrite recursion - 'only when subdomain not equal to first path element'
+    RewriteCond %1<>%3 !^(.*)<>\1$ [NC]
+    RewriteRule ^(.*) http://www.wikidata.org/wiki/Special:ItemByTitle/%1/$1 [L]
+
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
