add "/entity/" redirects for wikidata per
https://meta.wikimedia.org/wiki/Wikidata/Notes/URI_scheme
and talk with aude and dkinzler

and move all wikidata stuff into main.conf instead of having
it in 2 places

we have to use a real, external Redirect to the Special page,
so we chose to just always redirect to https

Bug: 44098

Change-Id: I0891bbf65997e1f672756a2a58e1c629e6bb077a

--- a/main.conf
+++ b/main.conf
@@ -89,7 +89,7 @@
 # Wikidata
 <VirtualHost *>
     ServerName www.wikidata.org
-    ServerAlias *.wikidata.org
+    ServerAlias wikidata.org *.wikidata.org
 
     DocumentRoot "/usr/local/apache/common/docroot/wikidata"
 
@@ -104,6 +104,15 @@
     Alias /wiki /usr/local/apache/common/docroot/wikidata/w/index.php
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
+
+    # bug 45005
+    # redirect wikidata.org to www.wikidata.org
+    RewriteCond %{HTTP_HOST} =wikidata.org
+    RewriteRule ^(.*)$ http://www.wikidata.org$1 [R=301,L,NE]
+
+    # rewrite /entity/ URLs for wikidata per
+    # https://meta.wikimedia.org/wiki/Wikidata/Notes/URI_scheme
+    RewriteRule ^/entity/(.*)$ https://www.wikidata.org/wiki/Special:EntityData/$1 [R=302,QSA]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
