add "/entity/" redirects for wikidata per
http://meta.wikimedia.org/wiki/Wikidata/Notes/URI_scheme

and talk with aude and dkinzler

and move all wikidata stuff into main.conf instead of having
it in 2 places

Change-Id: I0891bbf65997e1f672756a2a58e1c629e6bb077a

--- a/main.conf
+++ b/main.conf
@@ -56,7 +56,7 @@
 # Wikidata
 <VirtualHost *>
     ServerName www.wikidata.org
-    ServerAlias *.wikidata.org
+    ServerAlias wikidata.org *.wikidata.org
 
     DocumentRoot "/usr/local/apache/common/docroot/wikidata"
 
@@ -71,6 +71,17 @@
     Alias /wiki /usr/local/apache/common/docroot/wikidata/w/index.php
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
+
+    # bug 45005
+    # redirect wikidata.org to www.wikidata.org
+    RewriteCond %{HTTP_HOST} =wikidata.org
+    RewriteRule ^(.*)$ http://www.wikidata.org$1 [R=301,L,NE]
+
+    # rewrite /entity/ URLs for wikidata per
+    # http://meta.wikimedia.org/wiki/Wikidata/Notes/URI_scheme
+    RewriteCond %{HTTP_HOST} (^|\.)wikidata\.org$
+    RewriteCond %{REQUEST_URI} ^/entity/$
+    RewriteRule ^(.*)$ /wiki/Special:EntityData/$1 [QSA]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
