--- a/redirects.conf
+++ b/redirects.conf
@@ -626,9 +626,14 @@
 
     # bug 45005
     # redirect wikidata.org to www.wikidata.org
-    # lang code subdomain redirect to be done later
     RewriteCond %{HTTP_HOST} =wikidata.org
     RewriteRule ^(.*)$ http://www.wikidata.org$1 [R=301,L,NE]
+
+    # rewrite /entity/ URLs for wikidata per
+    # http://meta.wikimedia.org/wiki/Wikidata/Notes/URI_scheme
+    RewriteCond %{HTTP_HOST} (^|\.)wikidata\.org$
+    RewriteCond %{REQUEST_URI} ^/entity/$
+    RewriteRule ^(.*)$ /wiki/Special:EntityData/$1 [QSA]
 
     RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
     RewriteRule ^(.*)$ http://nostalgia.wikipedia.org$1 [R=301,L,NE]
