Don't redirect test.wikidata.org to the language redirects
Change-Id: I7e12ed2d1699ebe7055571c914a566c071c6a643

--- a/main.conf
+++ b/main.conf
@@ -73,7 +73,7 @@
     RewriteRule ^/w/$ /w/index.php
 
     # redirects for wikidata language subdomains
-    RewriteCond %{HTTP_HOST} !=www.wikidata.org
+    RewriteCond %{HTTP_HOST} !=(www|test)\.wikidata\.org
     RewriteRule ^(.*)$ /w/redirector.php?path=$1 [L]
 
     # Configurable favicon
