add VirtualHost for test.wikidata
Change-Id: Ie40b6579f152401730c424f9555b332d401afd96

--- a/main.conf
+++ b/main.conf
@@ -53,6 +53,39 @@
     </Directory>
 </VirtualHost>
 
+# test.wikidata
+<VirtualHost *>
+    ServerName test.wikidata.org
+
+    DocumentRoot "/usr/local/apache/common/docroot/wikidata_test"
+
+    AllowEncodedSlashes On
+
+    RewriteEngine On
+
+    # Make robots.txt editable via Mediawiki:robots.txt
+    RewriteRule ^/robots.txt$ /w/robots.php [L]
+
+    # Primary wiki redirector:
+    Alias /wiki /usr/local/apache/common/docroot/wikidata_test/w/index.php
+    RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
+    <Directory "/usr/local/apache/common/docroot/wikidata_test/w">
+       <IfModule mod_php5.c>
+           php_admin_flag engine on
+        </IfModule>
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/wikidata_test/w/extensions">
+       <IfModule mod_php5.c>
+           php_admin_flag engine off
+        </IfModule>
+    </Directory>
+</VirtualHost>
+
 # Wikidata
 <VirtualHost *>
     ServerName www.wikidata.org
