Add VirtualHost for votewiki
Change-Id: Ic8e21268d07092f587fbe80c091ebe508d7cbdcd

--- a/main.conf
+++ b/main.conf
@@ -312,6 +312,31 @@
     </Directory>
 </VirtualHost>
 
+<VirtualHost *>
+    ServerName vote.wikimedia.org
+
+    DocumentRoot "/usr/local/apache/common/docroot/vote"
+    AllowEncodedSlashes On
+    RewriteEngine On
+
+    # Primary wiki redirector:
+    Alias /wiki /usr/local/apache/common/docroot/vote/w/index.php
+
+    # Push to SSL
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule (.) https://vote.wikimedia.org%{REQUEST_URI} [R=301]
+
+    <Directory "/usr/local/apache/common/docroot/vote/w">
+        <IfModule mod_php5.c>
+            php_admin_flag engine on
+        </IfModule>
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/vote/w/extensions">
+        <IfModule mod_php5.c>
+            php_admin_flag engine off
+        </IfModule>
+    </Directory>
+</VirtualHost>
 
 # Wikipedias
 <VirtualHost *>
