Add a couple of rewrites for votewiki
Change-Id: I6fbcb554cacabd48fe6a44d33f6cb7c270288245

--- a/main.conf
+++ b/main.conf
@@ -321,6 +321,8 @@
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/vote/w/index.php
+    RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php
 
     # Push to SSL
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
