Move/redirect arbcom.XX wikis to arbcom-XX
Also redirect wg.en.wikipedia.org and noboards.chapters.wikimedia.org

Change-Id: Ib81bc9a3fa5658652b5a40a0943b97eddb3cfeaa

--- a/remnant.conf
+++ b/remnant.conf
@@ -986,11 +986,14 @@
 #ArbCom_DE Wiki
 <VirtualHost *>
     DocumentRoot "/usr/local/apache/common/docroot/arbcom_dewiki"
-    ServerName arbcom.de.wikimedia.org
+    ServerName arbcom-de.wikimedia.org
 
     AllowEncodedSlashes On
 
     RewriteEngine On
+	
+    RewriteCond %{HTTP_HOST} ^arbcom\.de\.wikimedia\.org$
+    RewriteRule ^(.*)$ http://arbcom-de.wikimedia.org$1 [R=301,L,NE]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/arbcom_dewiki/w/index.php
@@ -1021,11 +1024,15 @@
 #arbcom_nlwiki Wiki
 <VirtualHost *>
     DocumentRoot "/usr/local/apache/common/docroot/arbcom_nlwiki"
-    ServerName arbcom.de.wikimedia.org
+    ServerName arbcom-nl.wikimedia.org
 
     AllowEncodedSlashes On
 
     RewriteEngine On
+	
+    RewriteCond %{HTTP_HOST} ^arbcom\.nl\.wikimedia\.org$
+    RewriteRule ^(.*)$ http://arbcom-nl.wikimedia.org$1 [R=301,L,NE]
+
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/arbcom_nlwiki/w/index.php
@@ -1459,11 +1466,14 @@
 #arbcom_fiwiki Wiki
 <VirtualHost *>
     DocumentRoot "/usr/local/apache/common/docroot/arbcom_fiwiki"
-    ServerName arbcom.fi.wikimedia.org
+    ServerName arbcom-fi.wikimedia.org
 
     AllowEncodedSlashes On
 
     RewriteEngine On
+
+    RewriteCond %{HTTP_HOST} ^arbcom\.fi\.wikimedia\.org$
+    RewriteRule ^(.*)$ http://arbcom-fi.wikimedia.org$1 [R=301,L,NE]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/arbcom_fiwiki/w/index.php
