--- a/redirects.conf
+++ b/redirects.conf
@@ -299,6 +299,12 @@
     RewriteCond %{HTTP_HOST} ^pa\.us\.wikimedia\.org$
     RewriteRule ^(.*)$ http://pa-us.wikimedia.org$1 [R=301,L,NE]
 
+    RewriteCond %{HTTP_HOST} ^noboard\.chapters\.wikimedia\.org$
+    RewriteRule ^(.*)$ http://noboard-chapters.wikimedia.org$1 [R=301,L,NE]
+
+    RewriteCond %{HTTP_HOST} ^wg\.en\.wikipedia\.org$
+    RewriteRule ^(.*)$ http://wg-en.wikipedia.org$1 [R=301,L,NE]
+
     RewriteCond %{HTTP_HOST} =tp.wikipedia.org
     RewriteRule ^(.*)$ http://tokipona.wikipedia.org$1 [R=301,L,NE]
 
