commit all changes pendings

--- a/site.conf
+++ b/site.conf
@@ -1,3 +1,5 @@
+# Sounds like a labs only conf?
+Include /usr/local/apache/conf/wikidata.conf
 Include /usr/local/apache/conf/wikisource.conf
 Include /usr/local/apache/conf/wikispecies.conf
 Include /usr/local/apache/conf/wikiversity.conf
@@ -8,3 +10,5 @@ Include /usr/local/apache/conf/wikinews.conf
 Include /usr/local/apache/conf/wikinews.conf
 Include /usr/local/apache/conf/upload.conf
 Include /usr/local/apache/conf/config.conf
+Include /usr/local/apache/conf/wmflabs.conf
+Include /usr/local/apache/conf/wmflabs-logging.conf
