--- a/upload.conf
+++ b/upload.conf
@@ -1,28 +1,36 @@
+# vim: filetype=apache
+
 <VirtualHost *>
     ServerName upload
     ServerAlias upload.beta.wmflabs.org
     UseCanonicalName off
-    DocumentRoot "/mnt/upload"
+    DocumentRoot "/mnt/upload7"
     Options -Indexes
 
 RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+
+# uncomment these lines for debugging
+#RewriteLog "/tmp/rewrite.log"
+#RewriteLogLevel 3 
+#ErrorLog "/tmp/error.log"
+
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
 RewriteRule ^/([a-z]+)/([a-z\-]+)/thumb/[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/([0-9]+)px-.*$ http://$2.$1.beta.wmflabs.org/w/thumb.php?f=$3&width=$4 [L,QSA]
 # If your $wgHashedUploadDirectory is false, remove the first two steps after thumb/
  
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
 RewriteRule ^/([a-z]+)/([a-z\-]+)/thumb/archive/[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/([0-9]+)px-.*$ http://$2.$1.beta.wmflabs.org/w/thumb.php?f=$3&width=$4&archived=1 [L,QSA]
 # If your $wgHashedUploadDirectory is false, remove the first two steps after thumb/archive/
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
 RewriteRule ^/([a-z]+)/([a-z\-]+)/thumb/[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/page([0-9]+)-([0-9]+)px-.*$ http://$2.$1.beta.wmflabs.org/w/thumb.php?f=$3&width=$5&page=$4 [L,QSA]
 # If your $wgHashedUploadDirectory is false, remove the first two steps after thumb/
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
 RewriteRule ^/([a-z]+)/([a-z\-]+)/thumb/archive/[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/page([0-9]+)-([0-9]+)px-.*$ http://$2.$1.beta.wmflabs.org/w/thumb.php?f=$3&width=$5&page=$4&archived=1 [L,QSA]
 # If your $wgHashedUploadDirectory is false, remove the first two steps after thumb/archive/
 
