all access to /data/project/logs/apache-access.log
Log access with virtualhost name to /data/project/logs/apache-access.log

--- a/wmflabs-logging.conf
+++ b/wmflabs-logging.conf
@@ -2,6 +2,10 @@
 # Generic configuration file for logging
 #
 
-ErrorLog /home/wikipedia/logs/apache-error.log
+ErrorLog  /data/project/logs/apache-error.log
+
+# Log with virtualhost prepended
+CustomLog /data/project/logs/apache-access.log "%v %h %l %u %t \"%r\" %>s %b"
+
 #LogLevel warn
 LogLevel notice
