RT5330 ve.wikimedia.org redirect to wikimedia.org.ve
Change-Id: I1d61862bd8202547c3d6b60abe6625d2e6b3cfe2

--- a/redirects.conf
+++ b/redirects.conf
@@ -77,6 +77,7 @@
         sources.wikipedia.org \
         tartupeedia.ee *.tartupeedia.ee \
         textbook.wikipedia.org \
+        ve.wikimedia.org \
         vikimedija.org *.vikimedija.org \
         webhostingwikipedia.com *.webhostingwikipedia.com \
         wicipediacymraeg.org *.wicipediacymraeg.org \
@@ -635,6 +636,9 @@
     RewriteCond %{HTTP_HOST} =cz.wikimedia.org [OR]
     RewriteCond %{HTTP_HOST} =cs.wikimedia.org
     RewriteRule . http://www.wikimedia.cz/ [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =ve.wikimedia.org
+    RewriteRule ^(.*)$ http://wikimedia.org.ve$1 [R=302,L,NE]
 
     # pt.wikimedia.org got moved to wikimedia.pt
 
