redirect wiikipedia.com and wekipedia.com domains (RT #4679, RT #4681)
Change-Id: I80ce162840824c298f726cbcce73245c55ab41f9

--- a/redirects.conf
+++ b/redirects.conf
@@ -80,7 +80,9 @@
         ve.wikimedia.org \
         vikimedija.org *.vikimedija.org \
         webhostingwikipedia.com *.webhostingwikipedia.com \
+        wekipedia.com *.wekipedia.com \
         wicipediacymraeg.org *.wicipediacymraeg.org \
+        wiikipedia.com *.wiikipedia.com
         wikiartpedia.biz *.wikiartpedia.biz \
         wikiartpedia.co *.wikiartpedia.co \
         wikiartpedia.info *.wikiartpedia.info \
@@ -674,6 +676,11 @@
     # wikimedia.com redirect
     RewriteCond %{HTTP_HOST} wikimedia\.com$
     RewriteRule . http://wikimedia.org/ [R=301,L]
+
+    # wikipedia typo domains to www. instead of en - RT #4679,#4681
+    RewriteCond %{HTTP_HOST} wiikipedia.com\.com$ [OR]
+    RewriteCond %{HTTP_HOST} wekipedia.com\.com$
+    RewriteRule ^(.*)$ http://www.wikipedia.org [R=301,L]
 
     # wlm.wikimedia.org was used for Wiki Loves Monuments App in 2012
     # TODO: this is not a human-usable site, can be killed (along with its DNS record)
