add ServerAlias download.mw so that it doesn't show an ugly error page until this new download host has been setup on an eqiad host
Change-Id: I46742163e0cb5bc15856293d6a271d391a4e872c

--- a/main.conf
+++ b/main.conf
@@ -7,6 +7,7 @@
 # MediaWiki
 <VirtualHost *>
     ServerName www.mediawiki.org
+    ServerAlias download.mediawiki.org
     DocumentRoot "/usr/local/apache/common/docroot/mediawiki"
 
     AllowEncodedSlashes On
