Don't redirect m.wikimediafoundation.org to the main site
Change-Id: I2b60b8374d6491af01c2c381990b35e751e5ba31

--- a/redirects.conf
+++ b/redirects.conf
@@ -579,6 +579,7 @@
     # wikimediafoundation
     RewriteCond %{HTTP_HOST} (^|\.)wikimediafoundation\.(com|net|info)$ [OR]
     RewriteCond %{HTTP_HOST} \.wikimediafoundation\.org$
+    RewriteCond %{HTTP_HOST} !=m.wikimediafoundation.org
     RewriteRule ^(.*)$ http://wikimediafoundation.org$1 [R=301,L]
 
     # Bookshelf Project
