--- a/site.conf
+++ b/site.conf
@@ -8,6 +8,7 @@ Include /usr/local/apache/conf/testwiki.conf
 Include /usr/local/apache/conf/wiktionary.conf
 Include /usr/local/apache/conf/wikinews.conf
 Include /usr/local/apache/conf/wikinews.conf
+Include /usr/local/apache/conf/loginwiki.conf
 Include /usr/local/apache/conf/upload.conf
 Include /usr/local/apache/conf/config.conf
 Include /usr/local/apache/conf/wmflabs.conf
