--- a/wmflabs-logging.conf
+++ b/wmflabs-logging.conf
@@ -5,7 +5,9 @@
 ErrorLog  /data/project/logs/apache-error.log
 
 # Log with virtualhost prepended
-CustomLog /data/project/logs/apache-access.log "%v %h %l %u %t \"%r\" %>s %b"
+#CustomLog /data/project/logs/apache-access.log "%v %h %l %u %t \"%r\" %>s %b"
+# 20130722 hashar: added %A (apache IP) and X-Fowarded-Proto
+CustomLog /data/project/logs/apache-access.log "%A %v %h %l %u %t \"%r\" %>s %b xfp: %{X-Forwarded-Proto}i"
 
 #LogLevel warn
 LogLevel notice
