add visualwikipedia.com and .net redirects (RT #4677)
these were ours but didn't point to our DNS, they did exist
as links to wikipedia zone though.

simply adding ServerAliases and they will match the "catch-all" and
redirect to en.wikipedia.org

Change-Id: Ife70e2cbe5cb02ae0ae96615eb9b5961b1d89c29

--- a/redirects.conf
+++ b/redirects.conf
@@ -79,6 +79,8 @@
         textbook.wikipedia.org \
         ve.wikimedia.org \
         vikimedija.org *.vikimedija.org \
+        visualwikipedia.com *.visualwikipedia.com \
+        visualwikipedia.net *.visualwikipedia.net \
         webhostingwikipedia.com *.webhostingwikipedia.com \
         wekipedia.com *.wekipedia.com \
         wicipediacymraeg.org *.wicipediacymraeg.org \
