add softwarewikipedia.org and .com , just like existing .net
RT #4355

Change-Id: I1dbad11e40e8c7f79ec8de55ec145094790227ae

--- a/redirects.conf
+++ b/redirects.conf
@@ -73,7 +73,9 @@
         shop.wikisource.org store.wikisource.org \
         shop.wikiversity.org store.wikiversity.org \
         shop.wiktionary.org store.wiktionary.org \
+        softwarewikipedia.com *.softwarewikipedia.com \
         softwarewikipedia.net *.softwarewikipedia.net \
+        softwarewikipedia.org *.softwarewikipedia.org \
         sources.wikipedia.org \
         tartupeedia.ee *.tartupeedia.ee \
         textbook.wikipedia.org \
