redirect softwarewikipedia.net/.com/.org to mediawiki
Change-Id: I15b280a9c9e53f00f2852126a179b6348e4eee09

--- a/redirects.conf
+++ b/redirects.conf
@@ -589,7 +589,7 @@
 
     # Other projects
 
-    RewriteCond %{HTTP_HOST} (^|\.)softwarewikipedia\.net$
+    RewriteCond %{HTTP_HOST} (^|\.)softwarewikipedia.(com|net|org)$
     RewriteRule ^(.*)$ http://mediawiki.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =meta.wikipedia.org [OR]
