add voyagewiki.org & .com, change some other wikivoyage redirects to go www. directly
Change-Id: I8236a96b0341dd967bed68bc407aecdb6ad5ab11

--- a/redirects.conf
+++ b/redirects.conf
@@ -83,6 +83,8 @@
         vikimedija.org *.vikimedija.org \
         visualwikipedia.com *.visualwikipedia.com \
         visualwikipedia.net *.visualwikipedia.net \
+        voyagewiki.com *.voyagewiki.com \
+        voyagewiki.org *.voyagewiki.org \
         webhostingwikipedia.com *.webhostingwikipedia.com \
         wekipedia.com *.wekipedia.com \
         wicipediacymraeg.org *.wicipediacymraeg.org \
@@ -555,28 +557,36 @@
     RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyage.com
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyage.de
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyage.eu
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyage.net
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.wikivoyage.org$1 [R=301,L]
 
     # Wikivoyager (RT-4333)
     RewriteCond %{HTTP_HOST} (.+)\.wikivoyager.(org|de)$
     RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyager.org
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyager.de
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.wikivoyage.org$1 [R=301,L]
 
+    # Voyagewiki (RT-5539)
+    RewriteCond %{HTTP_HOST} (.+)\.voyagewiki.(com|org)$
+    RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
 
+    RewriteCond %{HTTP_HOST} =voyagewiki.com
+    RewriteRule ^(.*)$ http://www.wikivoyage.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =voyagewiki.org
+    RewriteRule ^(.*)$ http://www.wikivoyage.org$1 [R=301,L]
 
     # wikimediafoundation
     RewriteCond %{HTTP_HOST} (^|\.)wikimediafoundation\.(com|net|info)$ [OR]
