--- a/main.conf
+++ b/main.conf
@@ -80,6 +80,9 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     # moved wikistats off NFS
     RewriteRule ^/wikistats(/(.*$)|$) http://stats.wikimedia.org/$2 [R=302,L]
 
+    RewriteCond %{HTTP_HOST} =commons.wikipedia.beta.wmflabs.org
+    RewriteRule ^(.*)$ http://commons.wikimedia.beta.wmflabs.org$1 [R=301,L,NE]
+
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
