adding in wikipedia.in redirection support
Change-Id: Id6d30b5f8793cb1be248ee27c359925c10ae6c5d

--- a/redirects.conf
+++ b/redirects.conf
@@ -146,6 +146,7 @@
         wikipedia.co.za *.wikipedia.co.za \
         wikipedia.cz *.wikipedia.cz \
         wikipedia.ee *.wikipedia.ee \
+        wikipedia.in *.wikipedia.in \
         wikipedia.info *.wikipedia.info \
         wikipedia.lt *.wikipedia.lt \
         wikipedia.net *.wikipedia.net \
@@ -706,6 +707,10 @@
 
     # indiawikipedia.com - RT #1395
     RewriteCond %{HTTP_HOST} (.*)indiawikipedia\.com$
+    RewriteRule ^(.*)$ http://wikimedia.in/wikipedia.html [R=301,L]
+
+    # wikipedia.in
+    RewriteCond %{HTTP_HOST} (.*)wikipedia\.in$
     RewriteRule ^(.*)$ http://wikimedia.in/wikipedia.html [R=301,L]
 
     # coffee - keep for historic reasons:)
