jobs/careers redirects on wikimedia and wikipedia
RT #5709
change 82750

Change-Id: I701c8f1c50bf344d0238923eca635829a317c851

--- a/redirects.conf
+++ b/redirects.conf
@@ -10,6 +10,7 @@
         bugs.mediawiki.org \
         bugzilla.mediawiki.org \
         bugzilla.wikipedia.org \
+        careers.wikipedia.org \
         coffee.wikimedia.org \
         cs.wikimedia.org \
         cz.wikibooks.org \
@@ -47,6 +48,7 @@
         indiawikipedia.com *.indiawikipedia.com \
         liquidthreads.labs.wikimedia.org \
         it.wikimedia.org \
+        jobs.wikipedia.org \
         jp.wikipedia.org \
         labs.wikimedia.org \
         mediawiki.com *.mediawiki.com \
@@ -721,6 +723,12 @@
     RewriteCond %{HTTP_HOST} (.*)wikipediazero.org$
     RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Wikipedia_Zero [R=301,L,NE]
 
+    # jobs/careers - RT #5709
+    RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$
+    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Work_with_us
+    RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1
+
+</VirtualHost>
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
 
