--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -253,6 +253,7 @@
 # #
 <VirtualHost *>
 	ServerName jobs.wikimedia.org
+	ServerAlias careers.wikimedia.org
 
         RewriteEngine On
 	RewriteRule ^/$		http://wikimediafoundation.org/wiki/Work_with_us
