jobs/careers redirects on wikimedia and wikipedia
RT #5709
change 82750

Change-Id: I701c8f1c50bf344d0238923eca635829a317c851

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -253,7 +253,7 @@
 # #
 <VirtualHost *>
 	ServerName jobs.wikimedia.org
-
+    ServerAlias careers.wikimedia.org
         RewriteEngine On
 	RewriteRule ^/$		http://wikimediafoundation.org/wiki/Work_with_us
         RewriteRule ^/(.*)$     http://wikimediafoundation.org/wiki/Job_openings/$1
