make those jobs/career redirects [R=301,L,NE]
Change-Id: I17b74a40950916fb9aeb8f804adb6983b1cf2375

--- a/redirects.conf
+++ b/redirects.conf
@@ -724,8 +724,8 @@
     RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Wikipedia_Zero [R=301,L,NE]
 
     # jobs/careers - RT #5709
-    RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$
-    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Work_with_us
+    RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$ [R=301,L,NE]
+    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
     RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
