--- a/redirects.conf
+++ b/redirects.conf
@@ -725,8 +725,8 @@
 
     # jobs/careers - RT #5709
     RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$
-    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Work_with_us
-    RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1
+    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
+    RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1 [R=301,L,NE]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
