--- a/redirects.conf
+++ b/redirects.conf
@@ -137,6 +137,9 @@
         *.wikimediafoundation.org \
         wikimedia.jp.net *.wikimedia.jp.net \
         wikimedia.lt *.wikimedia.lt \
+        wikimediastories.com *.wikimediastories.com \
+        wikimediastories.net *.wikimediastories.net \
+        wikimediastories.org *.wikimediastories.org \
         wiki.mediawiki.org \
         wikimemory.org *.wikimemory.org \
         wikinews.com *.wikinews.com \
@@ -598,6 +601,8 @@
 
     # Other projects
 
+
+
     RewriteCond %{HTTP_HOST} (^|\.)softwarewikipedia.(com|net|org)$
     RewriteRule ^(.*)$ http://mediawiki.org$1 [R=301,L]
 
@@ -723,6 +728,10 @@
     RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$
     RewriteRule ^/$ http://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
     RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1 [R=301,L,NE]
+    
+    # wikimediastories.com/net/org - RT #4942
+    RewriteCond %{HTTP_HOST} (.*).wikimediastories.(com|net|org)$
+    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L,NE]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
