--- a/redirects.conf
+++ b/redirects.conf
@@ -731,7 +731,7 @@
 
     # wikimediastories.com/net/org - RT #4942
     RewriteCond %{HTTP_HOST} (.*).wikimediastories.(com|net|org)$
-    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L,NE]
+    RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
