--- a/redirects.conf
+++ b/redirects.conf
@@ -730,8 +730,9 @@
     RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1 [R=301,L,NE]
 
     # wikimediastories.com/net/org - RT #4942
-    RewriteCond %{HTTP_HOST} (.*).wikimediastories.(com|net|org)$
-    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L,NE]
+    RewriteCond %{HTTP_HOST} (^|\.)wikimediastories.(com|net|org)$
+    RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L]
+
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
