Revert "RT#4942 wikimediastories redirection"
This reverts commit c56d3374c40187b1bc579fa868675ae007d467b3.

Change-Id: I4eaede99328dedfbfd745fe69f37707c70d55ad4

--- a/redirects.conf
+++ b/redirects.conf
@@ -730,9 +730,8 @@
     RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1 [R=301,L,NE]
 
     # wikimediastories.com/net/org - RT #4942
-    RewriteCond %{HTTP_HOST} (^|\.)wikimediastories.(com|net|org)$
-    RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L]
-
+    RewriteCond %{HTTP_HOST} (.*).wikimediastories.(com|net|org)$
+    RewriteRule ^/$ http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L,NE]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
